// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as a destination when targeted by a piece on a different square 1`] = `
<button
  aria-label="Move KNIGHT on b3 to capture QUEEN on a1"
  aria-pressed={false}
  className="chess-board-square chess-board-square--a1 chess-board-square--clickable chess-board-square--targeted"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  ♕
</button>
`;

exports[`renders as active 1`] = `
<button
  aria-label="a1 contains a WHITE QUEEN selected for move. Use the tab keys to select a square to initiate move.  Press again to cancel selection."
  aria-pressed={true}
  className="chess-board-square chess-board-square--a1 chess-board-square--clickable chess-board-square--active"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  ♕
</button>
`;

exports[`renders as empty 1`] = `
<button
  aria-label="a1 is empty"
  aria-pressed={false}
  className="chess-board-square chess-board-square--a1"
  disabled={true}
  onClick={null}
  type="button"
/>
`;

exports[`renders with a piece 1`] = `
<button
  aria-label="a1 contains a WHITE QUEEN"
  aria-pressed={false}
  className="chess-board-square chess-board-square--a1"
  disabled={true}
  onClick={null}
  type="button"
>
  ♕
</button>
`;
